# core

./: .gitignore  run_maya_tests.py
avalon/: api.py  inventory.py  io.py  lib.py  mongodb.py  pipeline.py
avalon/blender/: pipeline.py
avalon/harmony/: README.md  TB_sceneOpened.js  __init__.py  lib.py  pipeline.py  server.py  workio.py
avalon/maya/: commands.py  pipeline.py  workio.py
avalon/nuke/: workio.py
avalon/photoshop/: README.md  __init__.py  extension.zxp  lib.py  pipeline.py  workio.py
avalon/photoshop/extension/: .debug  index.html
avalon/photoshop/extension/CSXS/: manifest.xml
avalon/photoshop/extension/client/: client.js
avalon/photoshop/extension/host/: New1.jsx  index.jsx
avalon/premiere/: pipeline.py
avalon/schema/: config-1.1.json
avalon/style/: style.qss
avalon/tests/: test_inventory.py
avalon/tools/: lib.py  models.py  widgets.py
avalon/tools/_models/: model_asset.py
avalon/tools/creator/: app.py
avalon/tools/html_server/: app.py
avalon/tools/libraryloader/: app.py  io_nonsingleton.py  lib.py  models.py  widgets.py
avalon/tools/loader/: app.py  model.py  widgets.py
avalon/tools/projectmanager/: app.py  dialogs.py
avalon/tools/sceneinventory/: app.py
avalon/tools/workfiles/: app.py
avalon/toonboom/: __init__.py  avalon.js  lib.py
avalon/tvpaint/: __init__.py  communication_server.py  communication_server2.py  launch_script.py  lib.py  pipeline.py  workio.py
avalon/tvpaint/plugin_code/: CMakeLists.txt  README.md  library.cpp
setup/tvpaint/: tvpsetup.py
